# magpi

./: README.md  pyproject.toml
tests/: test_magpi.py
